--- a/DirectoryScanner/DirectoryScanner.csproj
+++ b/DirectoryScanner/DirectoryScanner.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FolderBrowserForWPF" Version="1.2.0" />
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
   </ItemGroup>
 
